prepare for podcast season 2

--- a/styles/components/_text-image-header.scss
+++ b/styles/components/_text-image-header.scss
@@ -8,6 +8,12 @@
     }
   }
 
+  &__disabled {
+    .column-text {
+      opacity: 70%;
+    }
+  }
+
   .component-media-with-expansion {
     margin: 0 auto 20px;
     display: block;
